6 files modified, 2 added

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -7,5 +7,10 @@
 </ion-header>
 
 <ion-content padding>
-  
+
+MyHealthCalculator is a free application wherein a person can check and monitor his/her daily calorie intake using a calorie calculator. A calorie calculator tracks a person’s TDEE or Total Daily Energy Expenditure, it can help you in determining how many calories you should eat a day - or what your starting point is if you want to gain, lose or maintain your current weight. 
+Services: Free Calorie Calculator 
+
+Source: <a href="https://www.omnicalculator.com/health/calorie">https://www.omnicalculator.com/health/calorie</a>
+
 </ion-content>
